[package]
name = "internment"
version = "0.7.5"
authors = ["David Roundy <daveroundy@gmail.com>"]
edition = "2018"

description = "Easy interning of data"
license = "MIT OR Apache-2.0"
repository = "https://github.com/droundy/internment"

readme = "README.md"
categories = ["caching", "memory-management", "concurrency"]
keywords = ["hash", "interning", "hashconsing", "caching", "interner"]
rust-version = "1.65"

[badges]

appveyor = { repository = "droundy/internment" }
travis-ci = { repository = "droundy/internment" }
coveralls = { repository = "droundy/internment" }

is-it-maintained-issue-resolution = { repository = "droundy/internment" }
is-it-maintained-open-issues = { repository = "droundy/internment" }
maintenance = { status = "actively-developed" }

[dependencies]

parking_lot = "0.12.1"
ahash = { version = "0.8.5", optional = true }
dashmap = { version = "5.4.0", optional = true }
once_cell = { version = "1.4", optional = true }
tinyset = { version = "0.4.2", optional =  true }
memorable-wordlist = { version = "0.1.7", optional = true }
hashbrown = { version = "0.14.3" }
serde = { version = "1.0", optional = true }

arc-interner = { version = "0.7", optional = true }

append-only-vec = { version = "0.1.2", optional = true }


[features]

arc = ["ahash", "dashmap", "once_cell"]
bench = ["arc", "arc-interner", "arena", "memorable-wordlist", "append-only-vec"]
arena = []
intern = []
default = ["intern"]

[dev-dependencies]
quickcheck = "^0.9.2"
scaling = "0.1.3"
rand = "0.7.2"
serde_json = "1.0.87"
criterion = { version = "0.4", features = ["html_reports"] }

# [profile.release]
# debug = true

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "bench"
harness = false
required-features = ["bench"]

[[bench]]
name = "get_container"
harness = false
required-features = ["bench"]
